objects/DecsOnD__Assignment_Setting__c.object
<CustomObject>
    <fields>
        <fullName>DecsOnD__Assignee__c</fullName>
        <label>Assignee</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Object__c</fullName>
        <label>Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy</label>
        <referenceTo>DecsOnD__Policy__c</referenceTo>
        <relationshipLabel>Assignment Settings</relationshipLabel>
        <relationshipName>Assignment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Settings__c</fullName>
        <label>Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment Setting</label>
    <nameField>
        <displayFormat>AS-{000000000}</displayFormat>
        <label>Assignment Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>